--- a/aboutme.html
+++ b/aboutme.html
@@ -16,7 +16,7 @@
       <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav nav-pills">
           <li class="nav-item">
-            <a class="nav-link" href="imdex.html">Home </a>
+            <a class="nav-link" href="index.html">Home </a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="styles.html">Styles</a>
